--- a/website/templates/event_creation.html
+++ b/website/templates/event_creation.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="Event Creation" content="width=device-width, initial-scale=1">
-    <title>Event Creation</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-</head>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"></script>
+{% extends "base.html" %} {% block title %}Event creation{% endblock%} {% block content
+    %}
 
 <style>
     nav ul {
@@ -49,18 +37,6 @@
         margin-left: 300px;
     }
 </style>
-
-
-
-<header>
-    <nav>
-        <ul>
-            <li> <a href="index.html"> Home </a> </li>
-            <li> <a href="event_creation.html">Create an Event</a></li>
-            <li> <a href="Sign_in.html">Sign In</a></li>
-            <li> <a href="user_booking.html">Bookings</a></li>
-        </ul>
-    </nav>
 
     <h2 class="text-center">Create your event</h2>
 
@@ -119,10 +95,5 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
         </div>
-
-
-
-
     </main>
-
-</html>
+    {% endblock %}
