--- a/website/templates/hiphop.html
+++ b/website/templates/hiphop.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="Event Creation" content="width=device-width, initial-scale=1">
-    <title>Event Creation</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-</head>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"></script>
-
+{% extends "base.html" %} {% block title %}Hiphop{% endblock%} {% block content %}
+{% block content %} 
 <style>
     nav ul {
         list-style-type: none;
@@ -48,22 +35,7 @@
     }
 </style>
 
-
-<header>
-    <nav>
-        <ul>
-            <li> <a href="index.html"> Home </a> </li>
-            <li> <a href="event_creation.html">Create an Event</a></li>
-            <li> <a href="Sign_in.html">Sign In</a></li>
-            <li> <a href="user_booking.html">Bookings</a></li>
-        </ul>
-    </nav>
-
-    <body>
-        <h1>Hip-Hop Events
-        </h1>
-    </body>
-
+{% block content %} 
     <main>
         <div class="card">
             <img src="https://hips.hearstapps.com/hmg-prod/images/index5-1655491798.jpg" class="card-img-top" alt="...">
@@ -75,7 +47,7 @@
                         sole guest feature from 21 Savage, and production from a variety of producers, including Gordo,
                         Black Coffee, and 40
                     </p>
-                    <a href="event_detail.html" class="btn btn-primary">Details</a>
+                    <a href="event_detail" class="btn btn-primary">Details</a>
             </div>
         </div>
 
@@ -88,7 +60,7 @@
                         Lil Durk announces the continuation of his 2022 touring run with the ‘The 7220 Deluxe’ Tour. The
                         15-city second leg produced by Live Nation will kick off on soon.
                     </p>
-                    <a href="event_detail.html" class="btn btn-primary">Details</a>
+                    <a href="event_detail" class="btn btn-primary">Details</a>
             </div>
         </div>
 
@@ -101,7 +73,7 @@
                         Tickets for all Kanye West 2022 concerts are on sale here - Click for the hip hop icon's latest
                         tour info and the best Kanye West 2022 Tickets around!
                     </p>
-                    <a href="event_detail.html" class="btn btn-primary">Details</a>
+                    <a href="event_detail" class="btn btn-primary">Details</a>
             </div>
         </div>
 
@@ -119,5 +91,4 @@
             </div>
         </div>
     </main>
-
-</html>
+    {% endblock %}
