--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,122 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="Home Page" content="width=device-width, initial-scale=1">
-  <title>Home Page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-</head>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-
-
-<style>
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(0, 0, 0);
-  }
-
-  nav ul li {
-    float: left;
-  }
-
-
-  nav li a {
-    display: block;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    padding: 15px 145px;
-    text-decoration: none;
-  }
-
-  .jumbotron {
-    background-color: rgb(120, 115, 94);
-    color: rgb(255, 255, 255);
-    padding-left: 50px;
-    padding-bottom: 100px;
-    padding-top: 100px;
-    text-align: center;
-    background-image: "";
-  }
-
-  .card-top {
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
-  }
-</style>
-
-<header>
-
-  <nav>
-    <ul>
-      <li> <a href="index.html"> Home </a> </li>
-      <li> <a href="event_creation.html">Create an Event</a></li>
-      <li> <a href="Sign_in.html">Sign In</a></li>
-      <li> <a href="user_booking.html">Bookings</a></li>
-    </ul>
-  </nav>
-
-  <div class="jumbotron">
-    <h1 class="display-2">Music Festivals Queensland</h1>
-    <p class="lead">a concert that fits your music taste</p>
-    <hr class="my-1">
-    <p>pick your genre below to start</p>
-    <p class="lead"> </p>
-  </div>
-
-</header>
-
-
+{% extends "base.html" %} {% block title %}Home{% endblock%} {% block content %}
 <main>
-
   <div class="card-group">
     <div class="card">
-      <img class="card-top" src="https://s.abcnews.com/images/US/Hip-hop-protest-story_hpMain_16x9_1600.jpg"
-        alt="Card image cap">
+      <img
+        class="card-top"
+        src="https://s.abcnews.com/images/US/Hip-hop-protest-story_hpMain_16x9_1600.jpg"
+        alt="Card image cap"
+      />
       <div class="card-body">
         <h5 class="card-title">Hip-Hop</h5>
-        <p class="card-text">Find tickets to all live music, concerts, tour dates and festivals in and around Brisbane.
-          Currently there are 4 upcoming events.</p>
-        <a href="hiphop.html" class="btn btn-primary">VIEW GENRE</a>
+        <p class="card-text">
+          Find tickets to all live music, concerts, tour dates and festivals in
+          and around Brisbane. Currently there are 4 upcoming events.
+        </p>
+        <a href="hiphop" class="btn btn-primary">VIEW GENRE</a>
       </div>
       <div class="card-footer">
         <small class="text-muted">Upcoming</small>
       </div>
     </div>
     <div class="card">
-      <img class="card-top"
+      <img
+        class="card-top"
         src="https://www.rollingstone.com/wp-content/uploads/2022/01/RS_Afrobeats_Spot_F_RGB.jpg?w=1024"
-        alt="Card image cap">
+        alt="Card image cap"
+      />
       <div class="card-body">
         <h5 class="card-title">Afrobeats</h5>
-        <p class="card-text">Afrobeats, or Afro-pop or Afro-fusion, all popular music from West Africa initially
-          developed in Nigeria, Ghana, and the UK </p>
-        <a href="hiphop.html" class="btn btn-primary">VIEW GENRE</a>
+        <p class="card-text">
+          Afrobeats, or Afro-pop or Afro-fusion, all popular music from West
+          Africa initially developed in Nigeria, Ghana, and the UK
+        </p>
+        <a href="hiphop" class="btn btn-primary">VIEW GENRE</a>
       </div>
       <div class="card-footer">
         <small class="text-muted">Cancelled</small>
       </div>
     </div>
     <div class="card">
-      <img class="card-top" src="https://i1.sndcdn.com/artworks-000199066863-198opt-t500x500.jpg" alt="Card image cap"
-        alt="Card image cap">
+      <img
+        class="card-top"
+        src="https://i1.sndcdn.com/artworks-000199066863-198opt-t500x500.jpg"
+        alt="Card image cap"
+        alt="Card image cap"
+      />
       <div class="card-body">
         <h5 class="card-title">R&B</h5>
-        <p class="card-text">Rhythm and blues, frequently abbreviated as R&B or R'n'B, is a genre of popular music that
-          originated in the 1940s .</p>
-        <a href="hiphop.html" class="btn btn-primary">VIEW GENRE</a>
+        <p class="card-text">
+          Rhythm and blues, frequently abbreviated as R&B or R'n'B, is a genre
+          of popular music that originated in the 1940s .
+        </p>
+        <a href="hiphop" class="btn btn-primary">VIEW GENRE</a>
       </div>
       <div class="card-footer">
         <small class="text-muted">Inactive</small>
       </div>
     </div>
   </div>
-
-</html>
+</main>
+{% endblock %}
