--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -66,8 +66,30 @@
           <li><a href="event_creation">Create an Event</a></li>
           <li><a href="login">Login</a></li>
           <li><a href="user_booking">Bookings</a></li>
+          <li><a href="register">Register</a></li>
         </ul>
       </nav>
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            {% if category == 'error' %}
+            <div class="alert alert-danger alter-dismissable fade show" role="alert">
+              {{ message }}
+              <button type="button" class="close" data-dismiss="alert">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            {% else %}
+            <div class="alert alert-success alter-dismissable fade show" role="alert">
+              {{ message }}
+              <button type="button" class="close" data-dismiss="alert">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            {% endif%}
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
     </header>
     <div class="container">{% block content %} {% endblock %}</div>
   </body>
