--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Login{% endblock%}
+{% block title %}Register{% endblock%}
 
 {% block content %} 
     <section class="vh-100 bg-image" class="container h-50">
@@ -9,25 +9,25 @@
                     <div class="card-body p-5">
                         <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-                        <form>
+                        <form method="POST">
 
                             <div class="form-outline mb-4">
+                                <label class="form-label" id="name" for="register">Your Name</label>
                                 <input type="text" id="register" class="form-control form-control-lg" />
-                                <label class="form-label" for="register">Your Name</label>
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="email" id="register" class="form-control form-control-lg" />
+                                <input type="email" id="email" class="form-control form-control-lg" />
                                 <label class="form-label" for="register">Your Email</label>
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="password" id="register" class="form-control form-control-lg" />
+                                <input type="password" id="password1" class="form-control form-control-lg" />
                                 <label class="form-label" for="register">Password</label>
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="password" id="register" class="form-control form-control-lg" />
+                                <input type="password" id="password1" class="form-control form-control-lg" />
                                 <label class="form-label" for="register">Repeat your password</label>
                             </div>
 
@@ -38,15 +38,8 @@
                                             service</u></a>
                                 </label>
                             </div>
-
-                            <div class="d-flex justify-content-center">
-                                <button type="button"
+                                <button type="submit"
                                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
-                            </div>
-
-                            <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
-                                    class="fw-bold text-body"><u>Login here</u></a></p>
-
                         </form>
 
                     </div>
