--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -11,17 +11,17 @@
 
                         <form method="POST">
                             <div class="form-outline mb-4">
-                                <input type="email" id="register" class="form-control form-control-lg" />
+                                <input type="email" id="email" name='email' class="form-control form-control-lg" />
                                 <label class="form-label" for="register">Your Email</label>
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="password" id="register" class="form-control form-control-lg" />
+                                <input type="password" id="password" name="password" class="form-control form-control-lg" />
                                 <label class="form-label" for="register">Password</label>
                             </div>
 
                             <div class="d-flex justify-content-center">
-                                <button type="button"
+                                <button type="submit"
                                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Login</button>
                             </div>
                         </form>
