--- a/website/templates/hiphop.html
+++ b/website/templates/hiphop.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Hiphop{% endblock%} {% block content %}
+{% extends "base.html" %} {% block title %}Hiphop{% endblock%}
 {% block content %} 
 <style>
     nav ul {
@@ -35,7 +35,7 @@
     }
 </style>
 
-{% block content %} 
+
     <main>
         <div class="card">
             <img src="https://hips.hearstapps.com/hmg-prod/images/index5-1655491798.jpg" class="card-img-top" alt="...">
